<resources>
    <string name="app_name">Pet Pal</string>
    <string name="view_all_reminders">All Reminders</string>
    <string name="view_your_pet_profile">Your Pet Profile</string>
    <string name="no_recent_reminders">No Recent Reminders</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="enter_description">Enter Description</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_time">Pick a time</string>
    <string-array name="reminder_categories">
        <item>Walk</item>
        <item>Grooming</item>
        <item>Vet</item>
        <item>Food</item>
        <item>Others</item>
    </string-array>
    <string name="channel_name">Reminder Notifications</string>
    <string name="channel_description">Notifications for reminders</string>
</resources>